kubernetes/remote/orangered.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: orangered
  labels:
    app: orangered

spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: orangered
    spec:
      containers:
        - name: orangered
          image: gcr.io/orangered/orangered
