kubernetes/remote/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: orangered-ingress
spec:
  backend:
    serviceName: orangered
    servicePort: 5000
